# bookseer

./: .gitignore  Procfile  README.md  db.sqlite3  demo_data.json  pyproject.toml
books/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
books/migrations/: 0001_initial.py  0002_auto_20230424_1730.py  0003_auto_20230425_1904.py  0004_auto_20230430_0902.py  0005_auto_20230618_1327.py
books/templates/books/: books_add.html  books_confirm_delete.html  books_edit.html  books_form.html  books_list.html
books/templates/colorfield/: color.html
books/templates/contact_admin/: form.html
books/views/: books.py  color.py  contact_admin.py
books_proj/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/account/: login.html  profile.html  signup.html
templates/inc/: footer.html  header.html
